# cps_learning

./: cps_learning_main.py  cps_policy.py  cps_training_main.py  process_main.py  training_main.py  utils.py  utils_functions.py
path_planning/ll4ma_movement_primitives/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
path_planning/ll4ma_movement_primitives/action/: DMPPolicy.action  ProMPPolicy.action
path_planning/ll4ma_movement_primitives/config/: experiment_1.yaml  experiment_2.yaml  review.rviz
path_planning/ll4ma_movement_primitives/launch/: execute_task_promp.launch  joy_demo_interface.launch  learn_from_demonstration.launch  offline_experiment_session.launch  post_process_active_learner.launch  promp_visualizer.launch  table_visualizer.launch
path_planning/ll4ma_movement_primitives/msg/: Array.msg  DMPConfigROS.msg  Mixture.msg  PlanarPose.msg  ProMPConfigROS.msg  TwoDArray.msg  WaypointROS.msg
path_planning/ll4ma_movement_primitives/notebooks/: gmm_active_learning.ipynb  gmm_active_learning_mi.ipynb  gp_active_learning.ipynb  plot_distribution_components.ipynb  test_covariance_estimation.ipynb  test_evidence_approximation-Copy1.ipynb  test_evidence_approximation.ipynb  visualize_covariance.ipynb
path_planning/ll4ma_movement_primitives/scripts/: display_rviz_imgs.py  entropy.py  execute_joint_promp.py  execute_task_promp.py  generate_validation_set.py  gmm_active_learning.py  gp_active_learning.py  modify_active_learning_metadata.py  obj_tf_broadcast.py  pandas_interface.py  post_process_active_learner.py  relearn_all.sh  robot_state_relay.py  run_experiment_validation.py  table_visualizer.py  test_bingham.py  test_promp_lib.py  test_promp_overlap.py  test_wishart_prior.py  tf_relay.py  update_config_calibration.py  visualize_ee_gmm.py  visualize_measure.py  visualize_promps.py
path_planning/ll4ma_movement_primitives/src/ll4ma_movement_primitives/: __init__.py
path_planning/ll4ma_movement_primitives/srv/: AddProMPDemo.srv  GetOptimizationInstance.srv  LearnProMP.srv  PolicyExecution.srv  SetTaskLabel.srv  VisualizeProMPs.srv  VisualizeRectangle.srv
(+147 files in other folders)
