<?xml version="1.0"?>
<package>
  <name>ll4ma_movement_primitives</name>
  <version>0.0.0</version>
  <description>
    This package provides implementations of movement primitive
    policy representations, such as Dynamic Movement Primitives
    and Probabilistic Movement Primitives.
  </description>
  <maintainer email="adam.conkey@gmail.com">Adam Conkey</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>ll4ma_trajectory_util</build_depend>
  <build_depend>ll4ma_trajectory_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>ll4ma_trajectory_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  
  <export></export>

</package>
